--- a/Cocktail DB/Flows/Cocktails/CocktailsTableViewCell/CocktailsTableViewCell.xib
+++ b/Cocktail DB/Flows/Cocktails/CocktailsTableViewCell/CocktailsTableViewCell.xib
@@ -25,7 +25,7 @@
                             <constraint firstAttribute="width" constant="64" id="mfm-2t-erw"/>
                         </constraints>
                     </imageView>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="eN0-XT-6QH">
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Loading..." lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="eN0-XT-6QH">
                         <rect key="frame" x="92" y="20" width="416" height="52"/>
                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                         <nil key="textColor"/>
