--- a/Cocktail DB/Flows/Cocktails/CocktailsTableViewCell/CocktailsTableViewCell.xib
+++ b/Cocktail DB/Flows/Cocktails/CocktailsTableViewCell/CocktailsTableViewCell.xib
@@ -17,7 +17,7 @@
                 <rect key="frame" x="0.0" y="0.0" width="528" height="92"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="missingImage" adjustsImageSizeForAccessibilityContentSizeCategory="YES" translatesAutoresizingMaskIntoConstraints="NO" id="uw8-BW-dFq">
+                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" adjustsImageSizeForAccessibilityContentSizeCategory="YES" translatesAutoresizingMaskIntoConstraints="NO" id="uw8-BW-dFq">
                         <rect key="frame" x="20" y="14" width="64" height="64"/>
                         <color key="tintColor" systemColor="systemGrayColor" red="0.5568627451" green="0.5568627451" blue="0.57647058819999997" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
@@ -49,7 +49,4 @@
             <point key="canvasLocation" x="-18.840579710144929" y="117.85714285714285"/>
         </tableViewCell>
     </objects>
-    <resources>
-        <image name="missingImage" width="128" height="128"/>
-    </resources>
 </document>
